--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import url(//fonts.googleapis.com/css?family=Space+Mono);
+
+body{
+    background-color: hsl(185, 41%, 84%);
+}
+
+#logo{
+    position: absolute;
+    left: 46%;
+    top: 10%;
+}
+
+*{
+    font-family: "Space Mono";
+}
+
+@media (max-width: 991.98px) { 
+    .container{
+        background-color: hsl(0, 0%, 100%);
+        display: flex; 
+        justify-content: space-evenly;
+        flex-direction: column;
+        gap: 1.5rem;
+        position: absolute;
+        left: 27%;
+        top: 25%;
+        padding:1.5rem;
+        width:fit-content;
+        border-radius: 1.5rem;
+    }
+ }
+.container{
+    background-color: hsl(0, 0%, 100%);
+    display: flex; 
+    justify-content: space-evenly;
+    gap: 1.5rem;
+    position: absolute;
+    left: 27%;
+    top: 25%;
+    padding:1.5rem;
+    width:fit-content;
+    border-radius: 1.5rem;
+}
+
+.card{
+    border-radius: 1.5rem;
+}
